Fixed issue with loader on Safari and image sizes of category items

--- a/global.css
+++ b/global.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@media(min-width: 1000px){
+    ::-webkit-scrollbar{
+        width: 1px;
+    }
+}
